<resources>
    <string name="app_name">A3_homework</string>
    <string name="txt">текст</string>
    <string name="ok">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_frag1">Фрагмент 1</string>
    <string name="menu_frag2">Фрагмент 2</string>
    <string name="menu_frag3">Фрагмент 3</string>
    <string name="menu_frag4">Фрагмент 4</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="main_activity_name">Главная страница</string>
    <string name="choose_color">Выбор цветовой темы</string>
    <string name="name">Имя</string>
    <string name="input">Войти</string>
    <string name="snackBarText">Введите имя - от 1 до 10 символов</string>
    <string name="snackBarText10">Не более 10 символов</string>
    <string name="input_activity_name">Вход в систему</string>
    <string name="button1">Показать цвета 1</string>
    <string name="button2">Показать цвета 2</string>
    <string name="Button3">Загрузить фрагменты</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="buttonClose">Закрыть</string>
    <string name="button_text">text</string>
    <string name="bordered">bordered</string>
    <string name="raised">raised</string>
    <string name="raisedElevated">Raised Elevated</string>
    <string name="raisedFlat">Raised Flat</string>
    <string name="ToolbarActivity">ToolbarActivity</string>
    <string name="ButtonActivity">ButtonActivity</string>
    <string name="fruit">Фрукты</string>
    <string name="vegetables">Овощи</string>
    <string name="nature">Природа</string>
    <string name="animals">Животные</string>
    <string name="download">Загружай!</string>
    <string name="sub_">Поиск и загрузка изображений</string>
    <string name="ToolBarActivity">ToolBarActivity</string>
    <string name="show">Показать</string>
    <string name="close">Скрыть</string>
    <string name="scroll_text">
        Отель "Калифорния"\n
© Yell (yell_12@mail.ru)\n
\n
Я ехал по темному пустынному шоссе,\n
Прохладный ветер трепал мои волосы,\n
Теплый аромат colitas\n
Разливался в воздухе.\n
Вдали перед собой\n
Я увидел мерцающие огоньки.\n
Голова моя отяжелела,\n
Глаза слипались,\n
Нужно было остановиться на ночь.\n
\n
Она стояла в дверях.\n
Я услышал звон церковного колокола,\n
И подумал про себя:\n
Это место может оказаться Раем\n
Или Адом.\n
Она зажгла свечу\n
И пошла вперед, показывая мне дорогу.\n
Я услышал голоса в коридоре,\n
Мне показалось, они говорили:\n
\n
Добро пожаловать в отель "Калифорния"\n
Такое милое место\n
Такое милое место\n
Такое милое лицо.\n
В отеле "Калифорния" хватает комнат\n
\n
В любое время года\n
(В любое время года)\n
Можете здесь остановиться.\n

У нее на уме только "Тиффани",\n
Она ездит на "Мерседесе",\n
Вокруг нее толпа милых мальчиков,\n
Которых она зовет друзьями.\n
Как они танцуют у нее во дворе\n
В сладкой летней испарине,\n
Одни танцуют, чтобы вспомнить,\n
Другие - чтобы забыть.\n
\n
Я обратился к метрдотелю:\n
"Будьте любезны, принесите мне вина"\n
Он ответил, "Ничего подобного у нас и в\n
помине не было с 1969-го."\n
И эти голоса всё\n
Звучат и звучат издалека.\n
Они не дают тебе уснуть ночью,\n
И ты слышишь, как они говорят:\n
Добро пожаловать в отель "Калифорния"\n
Такое милое место\n
Такое милое место\n
Такое милое личико.\n
Здесь все так мило живут,\n
В этом отеле "Калифорния"\n
Какой приятный сюрприз\n
(Какой приятный сюрприз)\n
У тебя есть алиби?\n
\n
Зеркальные потолки,\n
Розовое шампанское на льду,\n
И она произносит: "Мы все здесь пленники\n
Нашей собственной затеи".\n
В покоях хозяина\n
Всё готово для пира.\n
Они бьют своими стальными ножами,\n
Но убить чудовище не в их силах.\n

Последнее, что я помню,\n
Это как я бежал к двери,\n
Я должен был вырваться оттуда,\n
И вернуться на своё шоссе.\n
"Не спеши" - сказал мне портье -\n
"Мы здесь только принимаем:\n
Выписаться ты можешь, когда пожелаешь,\n
Только вырваться отсюда тебе не удастся"…\n
</string>
    <string name="fabAct">FabActivity</string>
    <string name="showAsCard">Показать как карточки</string>
    <string name="discard">отмена</string>
    <string name="title_air">Самолёт</string>
    <string name="title_car">Автомобиль</string>
    <string name="title_ship">Корабль</string>
    <string name="horse">Олени</string>
    <string name="bottomActivity">BottomActivity</string>
    <string name="TabActivity">TabActivity</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">Fragment2</string>
    <string name="fragment3">Fragment3</string>
    <string name="materialdesignlesson7">MaterialDesignLesson7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mult">Мультяшные животные</string>
    <string name="home_animals">Домашние животные</string>
    <string name="wild_animals">Дикие животные</string>
    <string name="button_5">Button 5</string>
    <string name="button_4">Button 4</string>
    <string name="button_3">Button 3</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="simple_button">Просто кнопка</string>
    <string name="standart_theme">Стандартная тема</string>
    <string name="green_theme">Зелёная тема</string>
    <string name="yellow_theme">Жёлтая тема</string>
    <string name="purple_theme">Фиолетовая тема</string>

</resources>
