<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StyleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button5"
            style="@style/MyButtonStyle"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/button4"
            style="@style/MyButtonStyle"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/button3"
            style="@style/MyButtonStyle"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button2"
            style="@style/MyButtonStyle"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button1"
            style="@style/MyButtonStyle"
            android:text="@string/button_1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>