<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_frag1"
            android:icon="@drawable/cherry_24px"
            android:title="@string/fruit" />
        <item
            android:id="@+id/nav_frag2"
            android:icon="@drawable/carrot_24px"
            android:title="@string/Vegetables" />
        <item
            android:id="@+id/nav_frag3"
            android:icon="@drawable/beach_24px"
            android:title="@string/nature" />
        <item
            android:id="@+id/nav_frag4"
            android:icon="@drawable/cat_24px"
            android:title="@string/animals" />
    </group>

</menu>
